--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "uuid": "^8.2.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "nodemon": "^2.0.4"
   }
 }
